--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -9,7 +9,7 @@
 
 #normativa-filters
 {
-	margin: 40px 0 0 0;
+	margin: 30px 0 0 0;
 
 	form
 	{
@@ -21,16 +21,26 @@
 			color: $color-main-gray !important;
 			line-height: 1.2;
 			margin: 30px 0;
-			padding: 0 0 17px 0;
-		}
-		.title-fourth
-		{
-			margin: 0 0 10px 0;
+			padding: 0 0 18px 0;
 		}
 	}
 	#normativa-filters-tags
 	{
 		margin: 0 0 30px 0;
+	}
+}
+#normativa-main-list
+{
+	.list-group
+	{
+		.list-data
+		{
+			li
+			{
+				font-size: $f-font-size-small;
+				padding: 0 5px !important;
+			}
+		}
 	}
 }
 #normativa-search
@@ -89,7 +99,9 @@
 	}
 	#list-header
 	{
-		border-bottom: 1px solid $color-dark-gray;
+		background-color: $color-soft-gray;
+		border-bottom: 1px solid $color-main-gray;
+		border-top: 1px solid $color-main-gray;
 
 		ul
 		{
@@ -98,7 +110,7 @@
 			{
 				a
 				{
-					color: $color-dark-gray;
+					color: $color-gray;
 					font-weight: 600 !important;
 				}
 			}
