--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -103,7 +103,7 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur.</p>
-                            <a ui-sref="#" title="Ingrese una consulta" class="btn btn-primary">Ingrese una consulta</a>
+                            <a ng-href="#/consultas" title="Ingrese una consulta" class="btn btn-primary">Ingrese una consulta</a>
                         </div>
                         <figure class="col-md-3">
                             <img src="#" alt="Envío de consultas" />
@@ -124,7 +124,7 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur.</p>
-                            <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
+                            <a ng-href="#/ley" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
                         </div>
                         <figure class="col-md-3 pull-left">
                             <img src="#" alt="Envío de consultas" />
