--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -24,10 +24,6 @@
 			padding: 0 0 18px 0;
 		}
 	}
-	#normativa-filters-tags
-	{
-		margin: 0 0 30px 0;
-	}
 }
 #normativa-main-list
 {
@@ -50,7 +46,7 @@
 		border: 0;
 		border-radius: 0;
 		box-shadow: none;
-		color: $color-dark-gray;
+		color: $color-gray;
 		font-size: $f-font-size-large;
 		font-weight: 400;
 		line-height: 1.5;
@@ -100,8 +96,8 @@
 	#list-header
 	{
 		background-color: $color-soft-gray;
-		border-bottom: 1px solid $color-main-gray;
-		border-top: 1px solid $color-main-gray;
+		border-bottom: 1px solid $color-light-gray;
+		border-top: 1px solid $color-light-gray;
 
 		ul
 		{
