--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -33,13 +33,13 @@
                             <div>
                                 <div class="row">
                                     <div class="form-group col-md-12 col-xs-6">
-                                        <label for="filters-categorias" class="title-third">Categoría</label>
+                                        <label for="filters-categorias" class="title-fourth">Categoría</label>
                                         <select ng-model="currentCategory" ng-options="category.name  for category in categories" class="form-control"  ng-change="addCategoryFilter()">
                                             <option value="NONE" selected disabled>Todas </option>
                                         </select>
                                     </div>
                                     <div class="form-group col-md-12 col-xs-6">
-                                        <label for="filters-tema" class="title-third">Tema</label>
+                                        <label for="filters-tema" class="title-fourth">Tema</label>
                                          <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control"  ng-change="addTopicFilter()" >
                                               <option value="NONE" selected disabled>Todos </option>
                                          </select>
