--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -17,7 +17,7 @@
 			color: white;
 			text-shadow: $f-text-shadow-image;
 		}
-		.title-primary
+		.heading-primary
 		{
 			color: white !important;
 			margin: 20px 0 0 0;
@@ -32,7 +32,7 @@
 	{
 		.article-description
 		{
-			.title-secondary
+			.heading-secondary
 			{
 				color: $color-gray;
 				padding: 10px 0;
