--- a/app/styles/_ley.scss
+++ b/app/styles/_ley.scss
@@ -8,15 +8,29 @@
 {
     font-family: $f-font-family-secondary;
 
+    article
+    {
+        margin: 20px 0;
+    }
+    .annex
+    {
+        margin: 20px 0;
+        padding: 20px 0;
+        text-align: center;
+    }
     .article-num
     {
         font-weight: 700;
         text-transform: uppercase;
     }
+    .content-law
+    {
+        padding: 0 0 20px 0;
+    }
     .heading-law
     {
         border-bottom: 1px solid $color-dark-gray;
-        margin: 3% 0;
+        margin: 0 0 3% 0;
         padding: 0 0 5% 0;
         text-align: center !important;
 
@@ -37,17 +51,45 @@
             text-align: center !important;
         }
     }
-    .title-heading,
-    .title-primary,
-    .title-secondary,
-    .title-third,
+    .law-references
     {
+        li
+        {
+            display: inline-block;
+            padding: 0 3px;
+        }
+    }
+    .law-signatories
+    {
+        font-size: $f-font-size-small;
+        font-weight: 700;
+        margin: 20px 0;
+    }
+    .list-subsection
+    {
+        padding: 5px 0;
+
+        li
+        {
+            font-size: $f-font-size-small;
+            font-style: italic;
+            padding: 2px 0;
+        }
+    }
+    .heading-book
+    .heading-title,
+    .heading-chapter,
+    .heading-section,
+    .heading-clause,
+    {
+        padding: 10px 0 0 0;
         margin: 30px 0;
         text-align: center !important;
 
         span
         {
             display: block;
+            margin: 10px 0;
         }
     }
 }
