--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "_normativa.scss";
 @import "_consultas.scss";
 @import "_landing.scss";
+@import "_accordion.scss";
 
 
 //autocomplete styles 
