--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -3,19 +3,19 @@
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
                 <article id ="jumbo-info" class="col-xs-12 col-md-8 pull-right">
-                    <h1 class="title-primary">Digesto Jurídico Argentino</h1>
+                    <h1 class="heading-primary text-bold">Digesto Jurídico Argentino</h1>
                     <p class="text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
                 </article>
                 <div class="col-xs-12 col-md-4 pull-left">
                     <form role="form" id="landing-form-search" class="col-md-12 form-base">
                         <fieldset>
-                            <legend class="text-bold title-third">Buscar normas</legend>
+                            <legend class="text-bold heading-third">Buscar normas</legend>
                             <div class="form-group">
-                                <label for="norma-nro-codigo" class="title-fourth">N° / Código de Norma</label>
+                                <label for="norma-nro-codigo" class="heading-fourth">N° / Código de Norma</label>
                                 <input type="text" id="norma-nro-codigo" class="form-control" placeholder="Ingresar número de norma">
                             </div>
                             <div class="form-group">
-                                <label for="categoria" class="title-fourth">Categoría</label>
+                                <label for="categoria" class="heading-fourth">Categoría</label>
                                 <select id="categoria" class="form-control">
                                     <option value="0">Todas</option>
                                     <option value="1">ADM – Administrativo</option>
@@ -52,7 +52,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="fecha-sancion" class="title-fourth">Fecha de sanción</label>
+                                <label for="fecha-sancion" class="heading-fourth">Fecha de sanción</label>
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6">
                                         <select class="form-control">
@@ -97,7 +97,7 @@
                 <div class="col-md-10 col-md-offset-1 ">
                     <article class="col-md-12 article-description">
                         <div class="col-md-9">
-                            <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
+                            <h2 class="heading-secondary">¿Cómo puedo realizar una consulta?</h2>
                             <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -118,7 +118,7 @@
                 <div class="col-md-10 col-md-offset-1">
                     <article class="col-md-12 article-description">
                         <div class="col-md-9 pull-right">
-                            <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
+                            <h2 class="heading-secondary">¿Cómo se constituye el digesto jurídico?</h2>
                             <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
