--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -54,7 +54,7 @@
                             <div class="form-group">
                                 <label for="fecha-sancion" class="heading-fourth">Fecha de sanción</label>
                                 <div class="row">
-                                    <div class="col-md-6 col-sm-6">
+                                    <div class="col-xs-6">
                                         <select class="form-control">
                                             <option value="0" disabled selected>Desde</option>
                                             <option value="1">2014</option>
@@ -68,7 +68,7 @@
                                             <option value="9">2006</option>
                                         </select>
                                     </div>
-                                    <div class="col-md-6 col-sm-6">
+                                    <div class="col-xs-6">
                                         <select class="form-control">
                                             <option value="0" disabled selected>Hasta</option>
                                             <option value="1">2014</option>
