cambios landing estilos responsive

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -4,7 +4,7 @@
             <div class="col-md-10 col-md-offset-1">
                 <article id ="jumbo-info" class="col-xs-12 col-md-8 pull-right">
                     <h1 class="heading-primary text-bold">Digesto Jurídico Argentino</h1>
-                    <p class="text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
+                    <p class="hidden-xs hidden-sm text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
                 </article>
                 <div class="col-xs-12 col-md-4 pull-left">
                     <form role="form" id="landing-form-search" class="col-md-12 form-base">
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 ">
-                    <article class="col-md-12 article-description">
+                    <article class="col-md-12">
                         <div class="col-md-9">
                             <h2 class="heading-secondary">¿Cómo puedo realizar una consulta?</h2>
                             <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -105,8 +105,8 @@
                             cillum dolore eu fugiat nulla pariatur.</p>
                             <a ng-href="#/consultas" title="Ingrese una consulta" class="btn btn-primary">Ingrese una consulta</a>
                         </div>
-                        <figure class="col-md-3">
-                            <img src="#" alt="Envío de consultas" />
+                        <figure class="hidden-xs hidden-sm col-md-3">
+                            <img src="../images/i_consulta.png" alt="Envío de consultas" />
                         </figure>
                     </article>
                 </div>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <article class="col-md-12 article-description">
+                    <article class="col-md-12">
                         <div class="col-md-9 pull-right">
                             <h2 class="heading-secondary">¿Cómo se constituye el digesto jurídico?</h2>
                             <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -126,8 +126,8 @@
                             cillum dolore eu fugiat nulla pariatur.</p>
                             <a ng-href="#/ley" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
                         </div>
-                        <figure class="col-md-3 pull-left">
-                            <img src="#" alt="Envío de consultas" />
+                        <figure class="hidden-xs hidden-sm col-md-3 pull-left">
+                            <img src="../images/i_dja.png" alt="Consultas" />
                         </figure>
                     </article>
                 </div>
