--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -11,7 +11,15 @@
 	#jumbo-info
 	{
 		margin: 105px 0 0 0;
-		
+
+		@media (min-width: $screen-md-min) and (max-width: $screen-md-max)
+		{
+			margin: 80px 0 0 0;
+		}
+		@media (min-width: $screen-xs-min) and (max-width: $screen-sm-max)
+		{
+			margin: 10px 0;
+		}
 		p
 		{
 			color: white;
@@ -28,18 +36,6 @@
 	{
 		font-size: $f-font-size-base;
 	}
-	.container
-	{
-		.article-description
-		{
-			.heading-secondary
-			{
-				color: $color-gray;
-				padding: 10px 0;
-				text-align: left;
-			}
-		}
-	}
 	.jumbotron
 	{
 		background: url('../images/login-sparl-01-1024x488.jpg') no-repeat 100%;
@@ -49,7 +45,27 @@
 }
 #landing-content
 {
-	margin-bottom: 30px;
+	margin-bottom: 50px;
+
+	article
+	{
+		margin-bottom: 30px;
+
+		figure
+		{
+			margin: 30px 0 0 0;
+
+			img
+			{
+				width: 100%;
+			}
+		}
+		.heading-secondary
+		{
+			color: $color-gray;
+			padding: 10px 0;
+		}
+	}
 }
 #landing-form-search
 {
