--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -12,7 +12,7 @@
                             <legend class="text-bold heading-third">Buscar normas</legend>
                             <div class="form-group">
                                 <label for="norma-nro-codigo" class="heading-fourth">N° / Código de Norma</label>
-                                <input type="text" id="norma-nro-codigo" class="form-control" placeholder="Ingresar número de norma">
+                                <input type="text" id="norma-nro-codigo" class="form-control" placeholder="Ingresar n° de norma">
                             </div>
                             <div class="form-group">
                                 <label for="categoria" class="heading-fourth">Categoría</label>
@@ -54,8 +54,8 @@
                             <div class="form-group">
                                 <label for="fecha-sancion" class="heading-fourth">Fecha de sanción</label>
                                 <div class="row">
-                                    <div class="col-xs-6">
-                                        <select class="form-control">
+                                    <div class="col-xs-6 col-md-12 col-lg-6">
+                                        <select id="landing-form-select-since" class="form-control">
                                             <option value="0" disabled selected>Desde</option>
                                             <option value="1">2014</option>
                                             <option value="2">2013</option>
@@ -68,7 +68,7 @@
                                             <option value="9">2006</option>
                                         </select>
                                     </div>
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-6 col-md-12 col-lg-6">
                                         <select class="form-control">
                                             <option value="0" disabled selected>Hasta</option>
                                             <option value="1">2014</option>
