--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -2,7 +2,7 @@
     <section class="jumbotron">
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
-                <article id ="jumbo-info" class="col-xs-12 col-md-8 pull-right">
+                <article id ="jumbo-info" class="col-xs-12 col-md-8 pull-right wow fadeInUp">
                     <h1 class="heading-primary text-bold">Digesto Jurídico Argentino</h1>
                     <p class="hidden-xs hidden-sm text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
                 </article>
@@ -105,7 +105,7 @@
                             cillum dolore eu fugiat nulla pariatur.</p>
                             <a ng-href="#/consultas" title="Ingrese una consulta" class="btn btn-primary">Ingrese una consulta</a>
                         </div>
-                        <figure class="hidden-xs hidden-sm col-md-3">
+                        <figure class="hidden-xs hidden-sm col-md-3 wow fadeInRight">
                             <img src="../images/i_consulta.png" alt="Envío de consultas" />
                         </figure>
                     </article>
@@ -126,7 +126,7 @@
                             cillum dolore eu fugiat nulla pariatur.</p>
                             <a ng-href="#/ley" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
                         </div>
-                        <figure class="hidden-xs hidden-sm col-md-3 pull-left">
+                        <figure class="hidden-xs hidden-sm col-md-3 pull-left wow fadeInLeft">
                             <img src="../images/i_dja.png" alt="Consultas" />
                         </figure>
                     </article>
