--- a/app/views/ley.html
+++ b/app/views/ley.html
@@ -1,9 +1,9 @@
 <div class="container-fluid heading">
     <div class="container">
-        <h1 class="heading-primary">Ley 26.939</h1>
+        <h1 class="heading-primary wow fadeInUp">Ley 26.939</h1>
     </div>
 </div><!--/.heading-->
-<section class="container law">
+<section class="container law wow fadeIn">
 	<div class="col-md-10 col-md-offset-1">
 		<section class="content-law border-bottom-gray">
 			<section class="heading-law">
