--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -12,10 +12,6 @@
 	{
 		margin: 105px 0 0 0;
 
-		@media (min-width: $screen-md-min) and (max-width: $screen-md-max)
-		{
-			margin: 80px 0 0 0;
-		}
 		@media (min-width: $screen-xs-min) and (max-width: $screen-sm-max)
 		{
 			margin: 10px 0;
@@ -59,6 +55,10 @@
 			{
 				width: 100%;
 			}
+		}
+		p
+		{
+			margin-bottom: 30px;
 		}
 		.heading-secondary
 		{
