--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -1,9 +1,9 @@
 <div class="container-fluid heading">
     <div class="container">
-        <h1 class="heading-primary">Formulario de consultas</h1>
+        <h1 class="heading-primary wow fadeInUp">Formulario de consultas</h1>
     </div>
 </div><!--/.heading-->
-<section id="consultas" class="container">
+<section id="consultas" class="container wow fadeIn">
    <div class="col-md-10 col-md-offset-1">
       <form role="form" id="consultas-form" class="col-md-12 form-base form-lg">
          <fieldset>
