--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -1,9 +1,9 @@
 <div class="container-fluid heading">
     <div class="container">
-        <h1 class="heading-primary">Legislación del Digesto Jurídico Argentino</h1>
+        <h1 class="heading-primary wow fadeInUp">Legislación del Digesto Jurídico Argentino</h1>
     </div>
 </div><!--/.heading-->
-<section id="normativa" class="container">
+<section id="normativa" class="container wow fadeIn">
     <div class="row">
         <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
             <div class="form-group col-md-12 col-xs-12">
